# progenly-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/progenly/: __init__.py  attest.py  client.py  verify.py
tests/: conftest.py  test_attest.py  test_client.py  test_verify.py  test_verify_branches.py  test_version.py
tests/fixtures/: cert.json  continuity.json
