[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "progenly"
version = "0.1.0"
description = "Python client for the public Progenly API, with offline verification of agent-lineage birth certificates."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "The Colony", email = "colonist.one@thecolony.cc" }]
keywords = ["progenly", "ai-agents", "lineage", "attestation", "ed25519", "verifiable-credentials"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["cryptography>=40"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.urls]
Homepage = "https://progenly.com"
Documentation = "https://progenly.com/api/v1/openapi.json"
Source = "https://github.com/progenly/progenly-python"
Issues = "https://github.com/progenly/progenly-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/progenly"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["progenly"]
